@@ -27,5 +27,42 @@
 
             Assert.IsNull(token);
         }
+
+        [TestMethod]
+        public void ShouldParseInteger()
+        {
+            Lexer lexer = new Lexer("123");
+
+            Token token = lexer.NextToken();
+
+            Assert.IsNotNull(token);
+            Assert.AreEqual(TokenType.Integer, token.TokenType);
+            Assert.AreEqual("123", token.Value);
+
+            token = lexer.NextToken();
+
+            Assert.IsNull(token);
+        }
+
+        [TestMethod]
+        public void ShouldParseSeparators()
+        {
+            string separators = "()[]{},:;";
+            Lexer lexer = new Lexer(separators);
+
+            Token token;
+
+            foreach (char ch in separators)
+            {
+                token = lexer.NextToken();
+                Assert.IsNotNull(token);
+                Assert.AreEqual(TokenType.Separator, token.TokenType);
+                Assert.AreEqual(ch.ToString(), token.Value);
+            }
+
+            token = lexer.NextToken();
+
+            Assert.IsNull(token);
+        }
     }
 }
