@@ -1,0 +1,11 @@
+﻿namespace AjOslo.MGrammar.Ast
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public abstract class LanguageElement
+    {
+    }
+}
